--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <html lang="en">
 
-<head meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></head>
+<head meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
 <meta charset="utf-8">
 <title>ScrumTimer</title>
 <base href="/">
